--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@openzeppelin/contracts": "^4.0.0",
     "@truffle/hdwallet-provider": "1.0.41-1",
     "dotenv": "8.2.0",
+    "ethereumjs-util": "^7.1.4",
     "ganache-core": "latest",
     "mocha": "8.1.3",
     "truffle": "latest",
