--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ganache-core": "latest",
     "mocha": "8.1.3",
     "truffle": "latest",
+    "truffle-assertions": "^0.9.2",
     "truffle-contract-size": "latest",
     "truffle-flattener": "latest",
     "web3": "latest"
