--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/truffle-upgrades": "1.3.1",
     "chai": "4.2.0",
     "chai-bn": "0.2.1",
-    "ganache-cli": "6.12.1"
+    "ganache-cli": "6.12.1",
+    "solidity-coverage": "^0.7.20",
   }
 }
